2014-02-24  Julien Bect  <julien.bect@supelec.fr>

	Try to solve the problem with MEX-files in private directories.

	* stk_init.m: Build the MEX-files *before* adding STK's
	subdirectories to the path. Finger crossed.
	* stk_build.m: Don't test if MEX-files located in private
	directories are found (not at this point).
	* config/stk_config_testprivatemex.m: New function to test if
	MEX-files located in private directories are found.

	Add load/unload scripts for the MOLE.

	* misc/mole/PKG_ADD.m: New initialization script, that adds
	selected subdirectories of the MOLE to the path.
	* misc/mole/PKG_DEL.m: Remove MOLE subdirectories from the path.
	* config/stk_config_path.m: Remove the part that is now handled by
	the new script (misc/mole/PKG_ADD.m).
	* etc/octave-pkg/pre_install.m: Run misc/mole/PKG_ADD.m first and
	PKG_DEL.m at the end (otherwise the load path would contain
	deleted temp directories after the installation).
	* stk_init.m: Run misc/mole/PKG_ADD.m first.

2014-02-22  Julien Bect  <julien.bect@supelec.fr>

	Rewrite stk_config_rmpath without a call to stk_config_path.

	* config/stk_config_rmpath.m: Rewrite without a call to
	stk_config_path, in prevision of forthcoming changes.

	Rewrite stk_config_addpath in a cleaner way.

	* config/stk_config_addpath.m: Rewrite the function in a cleaner
	way, without the useless output argument.
	* config/stk_config_getroot.m: Add an additional output argument,
	to indicate if STK is present in the path.

2014-02-18  Julien Bect  <julien.bect@supelec.fr>

	stk_param_getdefaultbounds.m: Handle Gaussian covariance functions.

	* paramestim/stk_param_getdefaultbounds.m: Handle the case of
	Gaussian isotropic and anisotropic covariance functions.

2014-02-17  Julien Bect  <julien.bect@supelec.fr>

	Improve stk_config_getroot.

	* config/stk_config_getroot.m: Make it work even if STK has not
	been added to the search path.

2014-02-16  Julien Bect  <julien.bect@supelec.fr>

	stk_sampling_maximinlhs.m: minor change
